samples/_failures_safe/1761788763_210e48_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f2ea55f9.c:162:8: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  162 | struct Token peek
      |        ^~~~~
